--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -64,10 +64,11 @@
       </div>
     </div>
 
+    <% if blogs.present? %>
     <div id="locations-blog-container">
       <div class="container">
         <% blogs = @location.posts.live.first(3) %>
-        <% if blogs.present? %>
+        
           <div class="location_blogs">
             <div class="container">
               <div class="row">
@@ -98,14 +99,15 @@
                         <% end %>
                       </div>
                     <% end %>
-                  </div></div>
+                  </div>
+                </div>
                 <% end %>
               </div>
             </div>
           </div>
-        <% end %>
+        
       </div>
-    </div>
+    </div><% end %>
 
 
 
