--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -100,6 +100,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
     .fa {margin:20px 0; color:#000000; font-size:20px;}
     h3 {margin:0;}
   }
+  .team-member {padding-bottom:10px;}
 }
 
 #welcome strong {color: #777777;}
