--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -136,18 +136,20 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 /*** LOCATIONS ***/
 
-#welcome-locations,#welcome-accommodation {padding:50px 0 100px 0;
-  h2 {font-size:20px; margin:20px 0 50px 0;}
-  .slide {@include header_font(); font-size:12px; letter-spacing:1px; text-transform: uppercase; 
-    a {
-      img {margin:0 auto;}
-      .name {margin-top:10px;}
+#welcome-locations,#welcome-accommodation {padding:50px 0 70px 0;
+  .locations {padding-bottom:30px;
+    h2 {font-size:20px; margin:20px 0 50px 0;}
+    .slide {@include header_font(); font-size:12px; letter-spacing:1px; text-transform: uppercase; 
+      a {
+        img {margin:0 auto;}
+        .name {margin-top:10px;}
+      }
     }
+    .bx-wrapper {padding:0 auto 100px auto;}
+    .bx-prev,.bx-next { background: url(/assets/controls.png) no-repeat; width: 13px!important; height:25px!important; top:45%!important; }
+    .bx-prev {left: -50px; background-position:top left!important;}
+    .bx-next {right: -50px; background-position:top right!important;}
   }
-  .bx-wrapper {padding:0 auto 100px auto;}
-  .bx-prev,.bx-next { background: url(/assets/controls.png) no-repeat; width: 13px!important; height:25px!important; top:45%!important; }
-  .bx-prev {left: -50px; background-position:top left!important;}
-  .bx-next {right: -50px; background-position:top right!important;}
 }
 
 #locations-blog-container {padding:50px 0 100px 0; background:#f4f4f4; text-align:center;
