--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -142,10 +142,10 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
     .slide {@include header_font(); font-size:12px; letter-spacing:1px; text-transform: uppercase; 
       a {
         img {margin:0 auto;}
-        .name {margin-top:10px;}
+        .name {margin-top:10px; line-height:18px;}
       }
     }
-    .bx-wrapper {padding:0 auto 100px auto;}
+    .bx-viewport {height:151px!important;}
     .bx-prev,.bx-next { background: url(/assets/controls.png) no-repeat; width: 13px!important; height:25px!important; top:45%!important; }
     .bx-prev {left: -50px; background-position:top left!important;}
     .bx-next {right: -50px; background-position:top right!important;}
