--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -104,7 +104,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 }
 
 #welcome strong {color: #777777;}
-#welcome ul, #welcome-locations ul, #welcome-accommodation ul {width:740px; margin:0 auto 30px auto; text-align:left;}
+#welcome ul, #welcome-locations ul, .accommodation ul {width:740px; margin:0 auto 30px auto; text-align:left;}
 
 #people {background: url("/assets/bg-people.jpg") 0 0 no-repeat; padding:85px 0;
   .content-container .content {position:initial; transform:none; top:initial;
@@ -173,7 +173,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .ms-skin-default .ms-nav-next {right:40px!important}
 }
 .accommodation {padding-bottom:70px;
-  ul {list-style:none; margin:100px auto 50px auto; padding:0; width:740px; text-align:left;
+  ul.amenities {list-style:none; margin:100px auto 50px auto; padding:0; width:740px; text-align:left;
     li {display:inline-block; margin:0 10px 13px 0;}
     li:nth-child(8) {margin-right:0;}
   }
