--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-xs-12">
           <% if @accommodation.amenities.present? %>
-            <ul>
+            <ul class="amenities">
               <% @accommodation.amenities.each do |amenity| %>
                 <li>
                   <%= image_fu amenity.image, "80x80#c", :title => amenity.name %>
@@ -35,7 +35,7 @@
 
   slider2.setup('masterslider2' , {
     width:1920,
-    height:500,
+    height:935,
     space:1,
     layout:'fullwidth',
     loop:true,
