--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -136,7 +136,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 /*** LOCATIONS ***/
 
-#welcome-locations,.accommodations {padding:50px 0 70px 0;
+#welcome-locations,.welcome-accommodation {padding:50px 0 70px 0;
   .locations {padding-bottom:30px;}
     h2 {font-size:20px; margin:20px 0 50px 0;}
     .slide {@include header_font(); font-size:12px; letter-spacing:1px; text-transform: uppercase; 
