--- a/app/views/refinery/blog/posts/_post.html.erb
+++ b/app/views/refinery/blog/posts/_post.html.erb
@@ -20,44 +20,44 @@
 </article>
 
 
-<% content_for :right do %>
-  <% if @post.locations.present? %>
-    <div class="blog_locations">
+<%# content_for :right do %>
+  <%# if @post.locations.present? %>
+<!--     <div class="blog_locations">
       <h2>Location</h2>
       <ul>
-        <% @post.locations.each do |location| %>
-          <li><%= link_to (image_fu location.cover_image, "75x75#c") + location.name, refinery.locations_location_path(location) %></li>
-          <div class="description"><%=raw truncate(location.description, :length => 110) %></div></li>
+        <%# @post.locations.each do |location| %>
+          <li><%#= link_to (image_fu location.cover_image, "75x75#c") + location.name, refinery.locations_location_path(location) %></li>
+          <div class="description"><%#=raw truncate(location.description, :length => 110) %></div></li>
           <div class="clear"></div>
         <% end %>
       </ul>
     </div>
-  <% end %>
-  <% if @post.accommodations.present? %>
+  <%# end %>
+  <%# if @post.accommodations.present? %>
     <div class="blog_locations">
       <h2>Accommodation</h2>
       <ul>
-        <% @post.accommodations.each do |accommodation| %>
-          <li><%= link_to (image_fu accommodation.cover_image, "75x75#c") + accommodation.name, refinery.accommodations_accommodation_path(accommodation) %>
-          <div class="description"><%=raw truncate(accommodation.description, :length => 110) %></div></li>
+        <%# @post.accommodations.each do |accommodation| %>
+          <li><%#= link_to (image_fu accommodation.cover_image, "75x75#c") + accommodation.name, refinery.accommodations_accommodation_path(accommodation) %>
+          <div class="description"><%#=raw truncate(accommodation.description, :length => 110) %></div></li>
           <div class="clear"></div>
-        <% end %>
+        <%# end %>
       </ul>
     </div>
-  <% end %>
-  <% if @post.activities.present? %>
+  <%# end %>
+  <%# if @post.activities.present? %>
     <div class="blog_locations">
       <h2>Experience</h2>
       <ul>
-        <% @post.activities.each do |activity| %>
-          <li><%= link_to (image_fu activity.cover_image, "75x75#c") + activity.name, refinery.activities_activity_path(activity) %></li>
-          <div class="description"><%=raw truncate(activity.description, :length => 110) %></div></li>
+        <%# @post.activities.each do |activity| %>
+          <li><%#= link_to (image_fu activity.cover_image, "75x75#c") + activity.name, refinery.activities_activity_path(activity) %></li>
+          <div class="description"><%#=raw truncate(activity.description, :length => 110) %></div></li>
           <div class="clear"></div>
-        <% end %>
+        <%# end %>
       </ul>
-    </div>
-  <% end %>
-<% end %>
+    </div> -->
+  <%# end %>
+<%# end %>
 
 
 <%= render :partial => '/refinery/draft_page_message' unless @post.nil? or @post.live? -%>
