--- a/app/views/refinery/blog/posts/_post.html.erb
+++ b/app/views/refinery/blog/posts/_post.html.erb
@@ -29,7 +29,7 @@
           <li><%#= link_to (image_fu location.cover_image, "75x75#c") + location.name, refinery.locations_location_path(location) %></li>
           <div class="description"><%#=raw truncate(location.description, :length => 110) %></div></li>
           <div class="clear"></div>
-        <% end %>
+        <%# end %>
       </ul>
     </div>
   <%# end %>
