--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -14,8 +14,10 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
+          <%= raw @accommodation.description %>
           <% if @accommodation.amenities.present? %>
             <ul class="amenities">
+            <h2>Activities & Facilities</h2>
               <% @accommodation.amenities.each do |amenity| %>
                 <li>
                   <%= image_fu amenity.image, "80x80#c", :title => amenity.name %>
@@ -23,7 +25,6 @@
               <% end %>
             </ul>
           <% end %>
-          <%= raw @accommodation.description %>
         </div>
       </div>
     </div>
