--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -106,7 +106,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 #welcome strong {color: #777777;}
 #welcome ul, #welcome-locations ul, .accommodation ul {width:740px; margin:0 auto 30px auto; text-align:left;}
 
-#people {background: url("/assets/bg-people.jpg") 0 0 no-repeat; padding:85px 0;
+#people {background: url("/assets/bg-people.jpg") 0 0 no-repeat; padding:85px 0 10px 0;
   .content-container .content {position:initial; transform:none; top:initial;
     h2 {font-size:15px; line-height:24px;}
     .street-child {padding:5px 0; width:740px; margin:0 auto;
